fetch & codegen
