# typesense_codegen/src/models/analytics_rule_type.rs
@@ -1,0 +1,43 @@
+/*
+ * Typesense API
+ *
+ * An open source search engine for building delightful search experiences.
+ *
+ * The version of the OpenAPI document: 30.0
+ *
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use ::std::borrow::Cow;
+use serde::{Deserialize, Serialize};
+
+///
+#[derive(Clone, Copy, Debug, Eq, PartialEq, Ord, PartialOrd, Hash, Serialize, Deserialize)]
+pub enum AnalyticsRuleType {
+    #[serde(rename = "popular_queries")]
+    PopularQueries,
+    #[serde(rename = "nohits_queries")]
+    NohitsQueries,
+    #[serde(rename = "counter")]
+    Counter,
+    #[serde(rename = "log")]
+    Log,
+}
+
+impl std::fmt::Display for AnalyticsRuleType {
+    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
+        match self {
+            Self::PopularQueries => write!(f, "popular_queries"),
+            Self::NohitsQueries => write!(f, "nohits_queries"),
+            Self::Counter => write!(f, "counter"),
+            Self::Log => write!(f, "log"),
+        }
+    }
+}
+
+impl Default for AnalyticsRuleType {
+    fn default() -> AnalyticsRuleType {
+        Self::PopularQueries
+    }
+}
