# typesense_codegen/src/models/create_analytics_rule_200_response_one_of_inner.rs
@@ -17,7 +17,7 @@ pub struct CreateAnalyticsRule200ResponseOneOfInner {
     #[serde(rename = "name")]
     pub name: String,
     #[serde(rename = "type")]
-    pub r#type: Type,
+    pub r#type: models::AnalyticsRuleType,
     #[serde(rename = "collection")]
     pub collection: String,
     #[serde(rename = "event_type")]
@@ -31,7 +31,12 @@ pub struct CreateAnalyticsRule200ResponseOneOfInner {
 }
 
 impl CreateAnalyticsRule200ResponseOneOfInner {
-    pub fn new(name: String, r#type: Type, collection: String, event_type: String) -> Self {
+    pub fn new(
+        name: String,
+        r#type: models::AnalyticsRuleType,
+        collection: String,
+        event_type: String,
+    ) -> Self {
         Self {
             name,
             r#type,
@@ -41,23 +46,5 @@ impl CreateAnalyticsRule200ResponseOneOfInner {
             params: None,
             error: None,
         }
-    }
-}
-///
-#[derive(Clone, Copy, Debug, Eq, PartialEq, Ord, PartialOrd, Hash, Serialize, Deserialize)]
-pub enum Type {
-    #[serde(rename = "popular_queries")]
-    PopularQueries,
-    #[serde(rename = "nohits_queries")]
-    NohitsQueries,
-    #[serde(rename = "counter")]
-    Counter,
-    #[serde(rename = "log")]
-    Log,
-}
-
-impl Default for Type {
-    fn default() -> Type {
-        Self::PopularQueries
     }
 }
