# typesense_codegen/src/models/mod.rs
@@ -14,6 +14,8 @@ pub mod analytics_rule_create;
 pub use self::analytics_rule_create::AnalyticsRuleCreate;
 pub mod analytics_rule_create_params;
 pub use self::analytics_rule_create_params::AnalyticsRuleCreateParams;
+pub mod analytics_rule_type;
+pub use self::analytics_rule_type::AnalyticsRuleType;
 pub mod analytics_rule_update;
 pub use self::analytics_rule_update::AnalyticsRuleUpdate;
 pub mod analytics_status;
@@ -186,6 +188,8 @@ pub mod synonym_item_delete_schema;
 pub use self::synonym_item_delete_schema::SynonymItemDeleteSchema;
 pub mod synonym_item_schema;
 pub use self::synonym_item_schema::SynonymItemSchema;
+pub mod synonym_item_upsert_schema;
+pub use self::synonym_item_upsert_schema::SynonymItemUpsertSchema;
 pub mod synonym_set_create_schema;
 pub use self::synonym_set_create_schema::SynonymSetCreateSchema;
 pub mod synonym_set_delete_schema;
